JTextFields now check if the value is a valid one